# abicus-prime

./: .eslintrc-bundle.js  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: merge-dependabot-prs.yml  release-dev.yaml  release-prod.yaml  test.yml
.qlty/: qlty.toml
playwright/: buttons.spec.ts  factorial.spec.ts  global-setup.ts  keyboard.spec.ts  memory.spec.ts  selection.spec.ts  settings.spec.ts  terminal.spec.ts  test-utils.ts
playwright/calculator/: basic-operations.spec.ts  edge-cases.spec.ts  math-functions.spec.ts  memory.spec.ts
playwright/modes/: terminal.spec.ts
playwright/settings/: language.spec.ts  settings-advanced.spec.ts  settings.spec.ts
playwright/ui/: accessibility.spec.ts  input-methods.spec.ts  interface.spec.ts
public/: site.webmanifest
src/: _clsx-jsx.d.ts  _vite-env.d.ts  app.tsx  init-jsx.ts  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/calculator/: index.ts
src/components/: settings-page.tsx  title-bar.tsx  warning-icon.tsx
src/error-boundary/: index.tsx
src/i18n/: hook.spec.ts  hook.ts  index.ts  translations.spec.ts  translations.ts
src/state/: index.tsx  internal-buffer.ts  internal-memory.ts  types.ts  user-functions.spec.ts  user-functions.ts
src/utils/: format-number.spec.ts  format-number.ts  format-result.spec.ts  format-result.ts  local-storage.ts  (+3 more)
(+17 files in other folders)
