[package]
name = "abicus"
version = "1.1.2"
description = "A Simple Scientific Calculator"
authors = ["Matriculation Examination Board, Finland"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tauri-plugin-prevent-default = "3.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
